# student_project_python_bindings

./: .gitignore  .gitmodules  README.md  doc.md
cuda_phase-retrieval/: CMakeLists.txt  README.md  doc_config.py  example.py  example_original.py  example_oversampling.py  phase_algo.hpp  phase_retrieval.cu  phase_retrieval_python.py  run.py
cuda_phase-retrieval/cmake/: add_msvc_poperties.cmake  copy_python_files.cmake
cuda_phase-retrieval/documentation/: Doxyfile  doc_config.py
cuda_phase-retrieval/html/: _r_e_a_d_m_e_8md.html  doc__config_8py.html  example_8py.html  example__original_8py.html  example__oversampling_8py.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacedoc__config.html  namespaceexample.html  namespaceexample__original.html  namespaceexample__oversampling.html  namespacemembers.html  namespacemembers_b.html  namespacemembers_c.html  namespacemembers_d.html  namespacemembers_e.html  namespacemembers_f.html  namespacemembers_func.html  namespacemembers_g.html  namespacemembers_h.html  namespacemembers_i.html  namespacemembers_j.html  namespacemembers_l.html  namespacemembers_m.html  namespacemembers_n.html  namespacemembers_o.html  namespacemembers_p.html  namespacemembers_q.html  namespacemembers_r.html  namespacemembers_s.html  namespacemembers_t.html  namespacemembers_u.html  namespacemembers_v.html  namespacemembers_vars.html  namespacemembers_vars_b.html  (+31 more)
cuda_phase-retrieval/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  (+26 more)
cuda_phase-retrieval/include/: CMakeLists.txt  cupy_caster.hpp  cupy_ref.py
cuda_phase-retrieval/latex/: doc__config_8py.tex  example_8py.tex  example__original_8py.tex  example__oversampling_8py.tex  files.tex  md__r_e_a_d_m_e.tex  namespacedoc__config.tex  namespaceexample.tex  namespaceexample__original.tex  namespaceexample__oversampling.tex  namespacephase__retrieval__python.tex  namespacerun.tex  namespaces.tex  phase__algo_8hpp.tex  phase__retrieval__python_8py.tex  refman.tex  run_8py.tex
cuda_phase-retrieval/original example/: example_original.py
cuda_phase-retrieval/src/: CMakeLists.txt  example_cuda.py  example_cuda_custom_cupy_result.py  example_python.py  phase_retrieval.cu  phase_retrieval_python.py
cuda_phase-retrieval/test/: CMakeLists.txt  test.py  test_algo.hpp  test_binding.cu
cuda_phase-retrieval/test/test_1_initial_cupy_reference/: CMakeLists.txt  test_custom_cupy.hpp  test_custom_cupy.py
cuda_phase-retrieval/test/test_2_simple_python_to_c_caster/: test_toCppCaster.py  toCpp.py
cuda_phase-retrieval/test/test_3_simple_c_to_python_caster/: test_toPythonCaster.py  toPython.hpp  toPython.py
cuda_phase-retrieval/test/test_4_simple_bidirect_caster/: bidirect.py  bidirectCaster.hpp
cuda_phase-retrieval/test/test_5_simple_pointer_caster/: CMakeLists.txt  numpy_ref.hpp  numpy_ref.py  pointerCaster.cpp  test_pointerCaster.py
cuda_phase-retrieval/test/test_6_cuda_fft_algorithm/: test_algo.hpp  test_algo.py
cuda_phase-retrieval/test/test_7_cupy_reference_management/: test_cupy.hpp
cuda_phase-retrieval/test/test_8_cupy_reference_cuda_interface/: test_interface.hpp  test_interface.py
cuda_phase-retrieval_class/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cuPhaseRet.sln  cuPhaseRet.vcxproj  cuPhaseRet.vcxproj.filters  environment.yml  example.py  example_cuda.py  example_cuda_v2.py  example_python.py  phase_algo.hpp  phase_retrieval.cu  pyExampleScript.vcxproj  run.py
cuda_phase-retrieval_class/cmake/: add_msvc_poperties.cmake
cuda_phase-retrieval_class/include/: cuda_algo.hpp  cupy_allocate.hpp  cupy_caster.hpp  cupy_ref.hpp  cupy_ref.py
cuda_phase-retrieval_class/original example/: README.md  example_original_oversampling.py
cuda_phase-retrieval_class/src/: CMakeLists.txt  example_cuda.py  example_cuda_custom_cupy_result.py  example_cuda_no_random.py  example_cuda_v2.py  phase_algo.hpp  phase_retrieval.cu  run.py
cuda_phase-retrieval_class/test/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cuPhaseRet_Test.vcxproj  cuPhaseRet_Test.vcxproj.filters  cupy_caster.hpp  cupy_ref.hpp  cupy_ref.py  pyTestScript.vcxproj  pyTestScript.vcxproj.filters  test_binding.cu  test_cupy.hpp  test_cupy.py
cuda_phase-retrieval_class/test/test_1_initial_cupy_reference/: CMakeLists.txt  cupy_pybind.cu  cupy_pybind.py  gpu_algo.hpp  test.hpp  test_custom_cupy.cu  test_custom_cupy.hpp  (+1 more)
cupy_array_caster/: CMakeLists.txt  Requirements.md
cupy_array_caster/test/: CMakeLists.txt
gpu_memory_management/: CMakeLists.txt  README.md  cuda_stream_test.py  cupy_caster.hpp  cupy_pybind.cu  cupy_pybind.py  cupy_pybind2.py  cupy_pybind3.py  cupy_pybind4.py  cupy_ref.hpp  cupy_ref.py  gpu_algo.hpp  run_cupy.py  run_pycuda.py
gpu_memory_management/test/: test.hpp  test.py  test_custom_cupy.py
memory_reference/: CMakeLists.txt  README.md
memory_reference/cmake/: set_cuda_language.cmake
memory_reference/include/: algogpu.py  algogpucuda.py  algogpuhip.py  cupy_allocate.hpp  cupy_caster.hpp  dtype_getter.hpp  hip_caster.hpp  hip_mem.py  hip_ref.hpp  hip_ref.py  mem_ref_detail.hpp  sync_open.py  tags.hpp
memory_reference/src/: CMakeLists.txt  algo.hpp  algo.py  algogpu.py  binding.cpp  binding.cu  example_copy.py  main.py  mem_ref.hpp  mem_ref.py  mem_ref_caster.hpp  mem_ref_detail.hpp  tags.hpp
memory_reference/test/: CMakeLists.txt
python_bindings_examples/simple_cpp/: CMakeLists.txt  README.md
(+71 files in other folders)
